--- a/index.css
+++ b/index.css
@@ -124,20 +124,65 @@ body{
         
     }
     .cards{
-        width: 280px;
+        width: 180px;
         height: 340px;
         position: absolute;
-        left: 200px;
+        left: 300px;
         top: 100px;
         perspective: 900px;
+        
         transition: 2s;
         transform-style: preserve-3d;
         
+    }
+    .frames{
+        width: 350px;
+        height: 150px;
+        box-shadow: 0 9px 10px rgba(27, 24, 24, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 30px;
+        
+        padding: 0 10px;
+       
     }
 
     
 
     
+}
+@media  screen and (max-width: 450px){
+    .cards{
+        width: 200px;
+        height: 340px;
+        position: absolute;
+        left: 200px;
+        top: 100px;
+        perspective: 900px;
+        margin-right: 20px;
+        transition: 2s;
+        transform-style: preserve-3d;
+        
+    }
+    .frames{
+        width: 300px;
+        height: 150px;
+        box-shadow: 0 9px 10px rgba(27, 24, 24, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 30px;
+        margin-left: -90px;
+        
+        padding: 0 10px;
+       
+    }
+
 }
 
 
